Ensure text remains visible during webfont load

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -47,7 +47,7 @@ body {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Roboto Condensed";
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 300;
 }
 
